 <resources>
    <string name="app_name">Mason-Map</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_feed">Feed</string>
    <string name="title_map">Map</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_activity_maps">Map</string>

    <string name="tempText">Temp Text</string>

    <!-- Feed's Card Information -->

    <string name="card_startSubtitle">Starts:</string>
    <string name="card_endSubtitle">Ends:</string>
    <string name="card_locationSubtitle">Where:</string>

    <string name="card_fav">Favorite Event</string>
    <string name="card_nav">Navigate to Event</string>
    <string name="card_link">Hyperlink to Event</string>

    <!-- End Feed's Card Information -->

    <!-- New Event -->

    <string name="title_new">New Event</string>

    <string name="new_title">Title</string>
    <string name="new_Date">Date</string>
    <string name="new_Start">Start Time</string>
    <string name="new_End">End Time</string>
    <string name="new_Location">Location</string>
    <string name="new_Link">Link</string>
    <string name="new_Submit">Create Event</string>
    <string name="new_Description">Description</string>


    <!-- End New Event -->

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="play_services_not_installed">Google Play services is not installed on this device.</string>

</resources>
