<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/event"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cardHeight"
        android:layout_marginTop="10dp"
        android:background="@color/cardview_shadow_end_color"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        android:textColor="@color/text">

        <TextView
            android:id="@+id/eventTitle"
            android:text="@string/tempText"
            tools:layout_editor_absoluteX="0dp"

            android:scrollHorizontally="false"
            android:minLines="2"
            android:maxLines="2"

            android:background="@color/masonGreen"
            android:layout_width="@dimen/card_titleWidth"
            android:layout_height="@dimen/card_titleHeight"
            android:layout_margin="@dimen/card_titleMargin"
            android:paddingHorizontal="@dimen/card_titleLRPadding"
            android:paddingVertical="@dimen/card_titleTBPadding"
            android:textSize="@dimen/card_titleSize"
            android:textColor="@color/card_titleText" />

        <TextView
            android:id="@+id/eventStartTitle"
            android:text="@string/card_startSubtitle"
            android:layout_below="@id/eventTitle"

            android:layout_width="@dimen/card_subtitleWidth"
            android:layout_height="@dimen/card_textHeight"
            android:layout_marginStart="@dimen/card_marginStart" />

        <TextView
            android:id="@+id/eventStart"
            android:text="@string/tempText"
            android:layout_below="@id/eventTitle"
            android:layout_toEndOf="@+id/eventStartTitle"


            android:textSize="@dimen/card_textSize"
            android:textColor="@color/card_text"
            android:background="@color/masonGold"
            android:layout_width="@dimen/card_textWidth"
            android:layout_height="@dimen/card_textHeight"
            android:paddingEnd="@dimen/card_padding"
            android:paddingStart="@dimen/card_padding"/>

        <TextView
            android:id="@+id/eventEndTitle"
            android:text="@string/card_endSubtitle"
            android:layout_below="@id/eventStart"

            android:layout_width="@dimen/card_subtitleWidth"
            android:layout_height="@dimen/card_textHeight"
            android:layout_marginStart="@dimen/card_marginStart" />

        <TextView
            android:id="@+id/eventEnd"
            android:text="@string/tempText"
            android:layout_below="@id/eventStart"
            android:layout_toEndOf="@+id/eventEndTitle"

            android:textSize="@dimen/card_textSize"
            android:textColor="@color/card_text"
            android:background="@color/masonGold"
            android:layout_width="@dimen/card_textWidth"
            android:layout_height="@dimen/card_textHeight"
            android:paddingEnd="@dimen/card_padding"
            android:paddingStart="@dimen/card_padding"/>

        <TextView
            android:id="@+id/eventLocationTitle"
            android:text="@string/card_locationSubtitle"
            android:layout_below="@id/eventEnd"

            android:layout_width="@dimen/card_subtitleWidth"
            android:layout_height="@dimen/card_textHeight"
            android:layout_marginStart="@dimen/card_marginStart" />

        <TextView
            android:id="@+id/eventLocation"
            android:text="@string/tempText"
            android:layout_below="@+id/eventEnd"
            android:layout_toEndOf="@+id/eventLocationTitle"

            android:textSize="@dimen/card_textSize"
            android:textColor="@color/card_text"
            android:background="@color/masonGold"
            android:layout_width="@dimen/card_textWidth"
            android:layout_height="@dimen/card_textHeight"
            android:paddingHorizontal="@dimen/card_padding"/>

        <ImageButton
            android:id="@+id/eventNavigation"
            android:layout_toEndOf="@+id/eventTitle"
            android:src="@drawable/ic_nav_black_24dp"

            android:contentDescription="@string/card_nav"

            android:scaleType="fitCenter"
            android:layout_marginStart="@dimen/card_buttonMarginStart"
            android:layout_width="@dimen/card_buttonWidth"
            android:layout_height="@dimen/card_buttonHeight"
            android:background="@color/transparent" />

        <ImageButton
            android:id="@+id/eventFavorite"
            android:layout_toEndOf="@+id/eventTitle"
            android:layout_below="@id/eventNavigation"
            android:src="@drawable/ic_favorite_black_24dp"
            android:contentDescription="@string/card_fav"

            android:scaleType="fitCenter"
            android:layout_marginStart="@dimen/card_buttonMarginStart"
            android:layout_width="@dimen/card_buttonWidth"
            android:layout_height="@dimen/card_buttonHeight"
            android:background="@color/transparent" />

        <ImageButton
            android:id="@+id/eventLink"
            android:text="@string/card_link"
            android:layout_toEndOf="@+id/eventTitle"
            android:layout_below="@id/eventFavorite"
            android:src="@drawable/ic_link_black_24dp"
            android:contentDescription="@string/card_link"

            android:scaleType="fitCenter"
            android:layout_marginStart="@dimen/card_buttonMarginStart"
            android:layout_width="@dimen/card_buttonWidth"
            android:layout_height="@dimen/card_buttonHeight"
            android:background="@color/transparent" />


    </RelativeLayout>



</android.support.constraint.ConstraintLayout>